# pym

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  Makfile  README.md  conf.py  index.rst  main.c  make.py  pam  pam.c  pam.h  pam.py  pam.pyi  pam.pyx  pam_module.c  pam_module.py  pyproject.toml  setup.py  test.pyx
bug/: Makefile  auth.py  class_test.c  class_test.h  class_test.pyx  load.py  main  main.c  open  open.c  pym  pym.c  pym.h  pym.pyx  setup.py
pam_python/: __init__.py  entrypoint.c  io.py  pam.c  pam.h  pam_python.pyi  pam_python.pyx  pamh.h  pipe.c  pipe.h  setup.py
ser/: main  main.c
testing/: run.sh  service_1.c  service_1.py
